--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ astor==0.8.1
 attrs==19.3.0
 backcall==0.1.0
 beautifulsoup4==4.8.2
-bleach==3.1.2
+bleach>=3.1.4
 bravado==10.4.3
 bravado-core==5.16.0
 bs4==0.0.1
